contentcuration/contentcuration/static/less/content-container.less
@import "global-variables.less";

.publish-id-text{
	border:none;
	outline:none;
	font-weight:bold;
	background-color:@gray-200;
	padding-left:5px;
	cursor:pointer;
}

// flexbox settings to make secondary navbar more responsive
#secondary-nav .nav {
	display: flex;
	align-items: center;
	width: 100%;

	li {
		max-width: min-content;
	}

	#queue-area {
		max-width: unset;
		flex-grow: 1;
		#queue {
			width: 100%;
			flex-shrink: 1;
			.ui-droppable {
				display: flex;
				align-items: center;
				i {
					width: 100%;
				}
			}
		}
	}
}

// in order to make topic tree more responsive, a chain of nested flexbox settings

body {
	display: flex;
	flex-direction: column;

	#channel-edit-sortable-boundary {
		display: flex;
		flex-direction: column;
		flex-grow: 1;

		#secondary-nav {
			flex-shrink: 0;
		}

		#channel-edit-content-wrapper {
			display: flex;
			flex-direction: column;
			flex-grow: 1;

			#main-content-area {
				display: flex;
				flex-direction: column;
				flex-grow: 1;

				.tree-edit-area {
					display: flex;
					flex-direction: column;
					flex-grow: 1;

					#container-wrapper {
						display: flex;
						flex-direction: column;
						flex-grow: 1;

						ul#container_area {
							display: flex;
							flex-direction: row;
							flex-grow: 1;

							> li {
								.title-bar {
									flex-shrink: 0;
								}

								display: flex;
								flex-direction: column;
								max-height: 100%;

								> ul.content-list {
									display: flex;
									flex-direction: column;
									height: 0;
									flex-grow: 1;


									> li {
										flex-shrink: 0;
									}
								}
							}
						}
					}
				}
			}
		}
	}
}

// end of flexbox settings, for now.

#secondary-nav {
	@secondary-nav-btn-color:#F2F2F2;
	padding:5px 10px 5px 20px;
	margin: 0 0 0 27px;
	background-color:transparent;
	border:none;
	width:100%;
	min-height: 0;
	li {
		font-size: @larger-body-text;
		cursor:pointer;
		color: @gray-700;
	}
	a{
		color:@gray-700;
		padding:7px;
		margin-right:15px;
		&:hover{
			background-color: transparent;
			color:@blue-500;
		}
	}
	#channel_settings {
	    margin-left: 10px;
	    &:hover{color:@blue-500;}
	}
	#channel_settings, #back_to_home { padding: 5px 10px; }
	.channel_edit_label{
	    padding: 10px 5px;
	    font-size: 12pt;
	    font-weight: bold;
	    color: @gray-500;
	}
	#channel_select_dd_wrapper{
		width:300px;
		padding:3px;
		.dropdown-menu{
			width:100%;
			margin-top:-10px;
			margin-left:3px;
			box-shadow: none;
			border: 1px solid @gray-400;
			border-top: none;
			max-height: 80vh;
    		overflow-y: auto;
			li a {
				width:100%;
				color:@gray-700;
			}
			li .viewonly_channel div{
				max-width: 60%;
				display:inline-block;
			}
			li:hover{
				background-color: @gray-200;
				cursor:pointer;
				*{color:@gray-700;}
			}
		}
		.dropdown-toggle{
			width: 300px;
			padding:7px;
			font-weight: bold;
			background-color: white;
			border: 1px solid @gray-400;
			border-radius: 5px;
			font-weight: bold;
			color:@gray-700;
			.caret {
				color: gray;
				height: 25px;
				margin: 8px 7px 0 0;
				position: absolute;
				right: 0;
			}
		}
		.default-channel-item{
			color:@annotation-gray;
			padding:2px 15px;
		}
	}
		padding:5px;
		*{
			vertical-align: middle;
		}
		#channel-publish-button, #channel-activate-button{
			.action-button;
			margin: 0 40px 0 0;
			border: none;
		}
		#channel-activate-button{
			background-color: #2A982A;
			border-color: #2A982A !important;
			&:hover{
				background-color: #67D267;
				color: white !important;
			}
		}
		#get_published_id {
			.action-text;
			font-size: 12pt;
			padding: 5px;
			width: max-content;
		}
		li:last-child #get_published_id{
			margin-right: 65px;
	}
}

#button_bar {
	width:100vw;
	background-color:@blue-100;
	margin:0;
	padding: 13px 0 0 30px;
	.nav-button-container {
		min-width: 50px;
		text-align: center;
		.inline-block;
		margin: 0px 15px;
		&:first-child{ margin-left: 0px; }
		.nav-button {
			width: 50px;
			margin: 0px auto;
			height: 40px;
			background: @body-background;
			border-radius: 2px;
			cursor: pointer;
			i {
				font-size: 26pt;
    			padding-top: 3px;
			    text-align: center;
			    display: block;
			    top: 8px;
			    color: @blue-500;
			}
		}
	}
	a {
		color: @body-font-color;
		&:hover, &:focus, &:active { text-decoration: none; }
	}
	.select_channel_view_wrapper {
		display: inline-block;
		vertical-align: top;
    	margin-top: 10px;
		margin-left: 15px;
	}
}

#ricecooker_header{
	padding: 10px;
    background-color: blanchedalmond;
    color: @gray-700;
    font-style: italic;
    a { font-weight: bold; }
}

#publish-id{
	margin-right:10px;
	font-size:9pt;
}
#disable-none-selected-wrapper{
	display:inline-block;
	/*.nav-button-container{
		opacity:1;
		cursor:cursor;
	}*/
}
.disabled-wrapper{
	.nav-button-container{
		opacity:0.5;
	}
	.disable-none-selected{
		cursor:not-allowed !important;
	}
}

:root {
	--approxChannelEditNavHeight: 35rem;
}
/* ... */

